bug corrigé Agrold
